<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan">We will help you find your way!</string>
    <string name="powered_by">Powered by Mohammed Sami!</string>

    <!--    OnBoarding screen title strings -->
    <string name="first_slide_title">Search your location</string>
    <string name="second_slide_title">Make a call</string>
    <string name="third_slide_title">Add missing place</string>
    <string name="forth_slide_title">Sit back and enjoy!</string>

    <!-- OnBoarding screen Description-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related places.</string>
    <string name="second_slide_desc">We provide almost all numbers of all departments and shops registered with us. you can perform a call to these shop and organisation.</string>
    <string name="third_slide_desc">If you have a shop or something and want to be a part of our growing industry then add your place by adding a them in the location market.</string>
    <string name="forth_slide_desc">We will handle every thing for you, As you have the app in your pocket then don\'t have to worry about anything.</string>
    <!-- Buttons -->
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="lets_get_started">Let\'s get started</string>
    <!-- String for Dashboard-->
    <!-- Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    
    <!-- titles and Descriptions -->
    <string name="featured_locations">All Features Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in towns </string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search..</string>
</resources>