<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Users.Dashboard"
    android:orientation="vertical"
    android:background="@color/home_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_name"
            android:textSize="30sp"
            android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
            android:id="@+id/title_Dash"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/add_new"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/banner_background"
            android:padding="5dp"/>
    </RelativeLayout>
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="-10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:elevation="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/search_text"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:src="@drawable/search"
                    android:layout_marginRight="15dp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/card1"
                        android:elevation="8dp"
                        android:layout_margin="8dp">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/restuarant"
                            android:layout_centerInParent="true"
                            />
                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurants"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/card2"

                    android:elevation="8dp"
                    android:layout_margin="8dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/hotels"
                        android:layout_centerInParent="true"
                        />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotels"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/card3"
                    android:elevation="8dp"
                    android:layout_margin="8dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/shops"
                        android:layout_centerInParent="true"
                        />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shops"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@color/card4"
                    android:elevation="8dp"
                    android:layout_margin="8dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/banks"
                        android:layout_centerInParent="true"
                        />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/banks"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
            </LinearLayout>
            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/banner_background_light"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/features"
                android:background="@color/banner_background"
                android:layout_width="170dp"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/featured_locations"
                    android:textSize="30sp"
                    android:textAllCaps="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/colorAccent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/featured_locations_description"
                    android:layout_margin="10dp"/>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/features_recycler"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_toRightOf="@id/features"
                android:background="@color/home_background"
                >

            </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/most_viewed_locations"
                       android:textSize="20sp"
                       android:textColor="@color/colorAccent"
                       android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                       android:textAllCaps="true"
                       android:layout_marginLeft="10dp"
                       />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mostViewed_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:textSize="20sp"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/brandon_grotesque_black_58a8a3e824392"
                        android:textAllCaps="true"
                        android:layout_marginLeft="10dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categories_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
